# C---Chatbot-Basic

./: CMakeLists.txt  CMakePresets.json  Learner.cpp  Learner.h  Voice.cpp  Voice.h  main.cpp
memory/: memory.txt
